# rust_monorepos

./: .gitignore  Cargo.toml  README.md  error.json  nx.json  package.json
apps/rust_forge_boilerplate/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md  STRUCTURE.md  error.json  lib.rs  project.json
apps/rust_forge_boilerplate/cmd/migrator/: main.rs
apps/rust_forge_boilerplate/cmd/scheduler/: main.rs
apps/rust_forge_boilerplate/cmd/seeder/: main.rs
apps/rust_forge_boilerplate/cmd/server/: main.rs
apps/rust_forge_boilerplate/cmd/worker/: main.rs
apps/rust_forge_boilerplate/common/: config.rs  error.rs  mod.rs
apps/rust_forge_boilerplate/common/infrastructure/: database.rs  mod.rs  mongodb.rs  redis.rs
apps/rust_forge_boilerplate/common/utils/: error.rs
apps/rust_forge_boilerplate/config/: default.toml
apps/rust_forge_boilerplate/deployment/: .env.example  .env.prod.example  .gitignore  Dockerfile.migrator  Dockerfile.scheduler  Dockerfile.seeder  Dockerfile.server  Dockerfile.worker  README.md  docker-compose.yml
apps/rust_forge_boilerplate/healthcheck_modules/: README.md  dto.rs  handler.rs  mod.rs
apps/user_services/: .env.example  Cargo.toml  README.md  error.json
apps/user_services/cmd/migrator/: main.rs
apps/user_services/cmd/scheduler/: main.rs
apps/user_services/cmd/seeder/: main.rs
apps/user_services/cmd/server/: main.rs
apps/user_services/cmd/worker/: main.rs
apps/user_services/common/: config.rs  error.rs  mod.rs
apps/user_services/common/infrastructure/: database.rs
apps/user_services/common/utils/: error.rs  hash.rs
apps/user_services/deployment/: .env.prod.example  Dockerfile.migrator  Dockerfile.scheduler  Dockerfile.seeder  Dockerfile.server  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml
apps/user_services/healthcheck_modules/: dto.rs  handler.rs  mod.rs  repo.rs
apps/user_services/migrations/: 20251209081449_user.up.sql
apps/user_services/user_modules/: dto.rs  handler.rs  middleware.rs  mod.rs  repo.rs  service.rs
tools/: README.md  create-rust-app.js
tools/rust_app_template/: .env.example  Cargo.toml  Makefile  error.json  project.json
tools/rust_app_template/cmd/migrator/: main.rs
tools/rust_app_template/cmd/scheduler/: main.rs
tools/rust_app_template/cmd/seeder/: main.rs
tools/rust_app_template/cmd/server/: main.rs
tools/rust_app_template/cmd/worker/: main.rs
tools/rust_app_template/common/infrastructure/: database.rs  redis.rs
tools/rust_app_template/common/utils/: error.rs  mod.rs
tools/rust_app_template/deployment/: .env.prod.example  .gitignore  Dockerfile.migrator  Dockerfile.scheduler  docker-compose.prod.yml  docker-compose.yml
tools/rust_app_template/healthcheck_modules/: handler.rs  mod.rs  service.rs
tools/rust_app_template/migrations/: .gitkeep
