
[workspace]
resolver = '2'
members = [
	'apps/rust_forge_boilerplate',
	'tools/rust_app_template',
]

[profile.release]
lto = true

[workspace.dependencies]
home = "0.5.12"
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
tokio-cron-scheduler = "0.10"
async-trait = "0.1"
