[package]
name = "rust_forge_boilerplate"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Configuration
dotenv = "0.15"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }

# Scheduler
tokio-cron-scheduler = "0.10"

# Worker
async-trait = "0.1"

[[bin]]
name = "server"
path = "cmd/server/main.rs"

[[bin]]
name = "worker"
path = "cmd/worker/main.rs"

[[bin]]
name = "scheduler"
path = "cmd/scheduler/main.rs"

[[bin]]
name = "migrator"
path = "cmd/migrator/main.rs"

[[bin]]
name = "seeder"
path = "cmd/seeder/main.rs"
