[package]
name = "rust_forge_boilerplate"
version = "0.1.0"
edition = "2024"
default-run = "server"

[lib]
path = "lib.rs"
[dependencies]
home =  { workspace = true } 
actix-web =  { workspace = true } 
actix-rt =  { workspace = true } 
actix-cors =  { workspace = true } 
tokio = { workspace = true }
serde =  { workspace = true } 
serde_json =  { workspace = true } 
sqlx = { workspace = true } 
mongodb =  { workspace = true } 
redis =  { workspace = true } 
validator =  { workspace = true } 
tracing = { workspace = true } 
tracing-subscriber =  { workspace = true } 
tracing-actix-web =  { workspace = true } 
dotenv =  { workspace = true } 
chrono = { workspace = true } 
uuid =  { workspace = true } 
tokio-cron-scheduler = { workspace = true } 
async-trait = { workspace = true } 

[[bin]]
name = "server"
path = "cmd/server/main.rs"

[[bin]]
name = "worker"
path = "cmd/worker/main.rs"

[[bin]]
name = "scheduler"
path = "cmd/scheduler/main.rs"

[[bin]]
name = "migrator"
path = "cmd/migrator/main.rs"

[[bin]]
name = "seeder"
path = "cmd/seeder/main.rs"
